# nameservice-api

./: Cargo.toml  README.md  docker-compose.yaml
src/: configs.rs  connectors.rs  main.rs  models.rs  router.rs  routes.rs
src/connectors/: base.rs
