[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
error-stack = "0.5.0"
futures = "0.3.30"
itertools = "0.13.0"
log = "0.4.22"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.10.0", features = ["v4"] }
